finished getting all design in place. some finesse left to add

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <div class='pt-3 pb-3  shaded shaded--brand'>
         <div class='container--padded'>
-          <nav class='flex'>
+          <nav class='flex flex-wrap'>
             <ul class='list--inline'>
               <li class='list--inline__item'><a href='/boat' class='fz-18 fw-700 js-page-nav-item'>Boat Covers Direct</a></li>
               <li class='list--inline__item'><a href='/car' class='fz-18 fw-300 js-page-nav-item'>Car Covers Direct</a></li>
@@ -32,7 +32,7 @@
       </div>
       <div class='pt-3 pb-3 bb bbw-2 bbc-l'>
         <div class='container--padded'>
-          <div class='flex align--center'>
+          <div class='flex flex-wrap align--center'>
             <div class='flex align--center logo'>
               <img src='/img/logo/logo.jpg' alt='Logo: blue boat cover' class='logo__img'>
               <h1 class='logo__text fw-800 fs-italic'>Boat Covers Direct</h1>
@@ -59,7 +59,7 @@
       <div class='pt-5 pb-4 bb bbw-2 bbc-d'>
         <div class='container--padded'>
           <nav>
-            <ul class='flex list--no-style'>
+            <ul class='flex flex-wrap list--no-style'>
               <li><a href='#0' class='nav-link fz-18 fw-700 dd-button dd-opened  js-page-menu-item'>Boat Covers</a></li>
               <li><a href='#0' class='nav-link fz-18 fw-700 dd-button ml-9  js-page-menu-item'>Bimini Tops</a></li>
               <li><a href='#0' class='nav-link fz-18 fw-700 dd-button ml-9  js-page-menu-item'>Boat Lift Covers</a></li>
@@ -139,7 +139,7 @@
             <p class='mt-3'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam placeat sint veniam. Distinctio, dolor doloremque ea excepturi id illum iste, non nostrum quas qui reprehenderit ullam unde velit!</p>
           </article>
         </div>
-        <div class='sidebar'>
+        <div class='sidebar--margin'>
           <h3 class='headline mb-8'>Topics</h3>
           <ul class='list list--no-style'>
             <li class='mb-4'><a href='#0'>Boat Covers</a></li>
