--- a/admin.html
+++ b/admin.html
@@ -23,91 +23,49 @@
               <li class='list--inline__item fz-18 fw-700 c-white'>Covers Direct Admin</li>
             </ul>
             <ul class='list--inline ml-auto flex'>
-              <li class='list--inline__item'><a href='/new-order' class='fz-18 fw-700 js-page-nav-item'>New Order</a></li>
-              <li class='list--inline__item'><a href='/orders' class='fz-18 fw-300 js-page-nav-item'>Orders</a></li>
-              <li class='list--inline__item'><a href='/reviews' class='fz-18 fw-300 js-page-nav-item'>Reviews</a></li>
+              <li class='list--inline__item'><a href='/admin/new-order' class='fz-18 fw-300 js-admin-nav'>New Order</a></li>
+              <li class='list--inline__item'><a href='/admin/orders.html' data-target='orders' class='fz-18 fw-300 js-admin-nav'>Orders</a></li>
+              <li class='list--inline__item'><a href='/admin/reviews.html' data-target='reviews' class='fz-18 fw-300 js-admin-nav'>Reviews</a></li>
             </ul>
           </nav>
         </div>
       </div>
     </header>
 
-    <main class='mb-7'>
-      <div class='container--padded'>
-        <div class='content'>
+    <main class='mb-7' id='js-entire-page-dropzone'>
+      <div class='container--padded mt-7'>
+        <div class='content mb-10'>
           <h1 class='headline fz-48'>Managing Phone Orders</h1>
         </div>
         <div class='flex--at-full'>
           <div class='content'>
             <div class='flex bb bbc-d bbw-2 pb-2 mb-10 mt-5'>
-              <div class='fz-22 fw-300'>Order Confirmation</div>
-              <div class='fz-22 fw-300 ml-8'>Shipping &amp; Billing</div>
-              <div class='fz-22 fw-300 ml-8'>Products</div>
-              <div class='fz-22 fw-300 ml-8'>Actions</div>
+              <div data-target='confirmation' class='js-admin-nav fz-22 fw-700'>Order Confirmation</div>
+              <div data-target='shipping' class='js-admin-nav fz-22 fw-300 ml-8'>Shipping &amp; Billing</div>
+              <div data-target='product' class='js-admin-nav fz-22 fw-300 ml-8'>Products</div>
+              <div data-target='actions' class='js-admin-nav fz-22 fw-300 ml-8'>Actions</div>
             </div>
-            <form class='form w-80p bb bbw-2 bbc-l'>
-              <div class='mb-5'>
-                <label class='label--block w-60p'>
-                  <span>Customer Email</span>
-                  <input type='text' class='input' placeholder='email address'>
-                </label>
-                <div class='flex'>
-                  <label class='label--block w-50p pr-2'>
-                    <span>Phone</span>
-                    <input type='text' class='input' placeholder='1-(555)-555-5555'>
-                  </label>
-                  <label class='label--block w-50p pl-2'>
-                    <span>Second Phone</span>
-                    <input type='text' class='input' placeholder='1-(555)-555-5555'>
-                  </label>
-                </div>
-                <label class='label--block w-100p'>
-                  <span>Order Information</span>
-                  <textarea class='input textarea w-100p' placeholder='Needed inofrmation here...'></textarea>
-                </label>
-              </div>
-              <div>
-                <label class='label--block' for='select1'><span>Customer Email</span></label>
-                <select id='select1' class='w-50p label--block js-nice-select'>
-                  <option value='fedex'>Fedex All Inclusive</option>
-                  <option value='other-1'>Other 1</option>
-                  <option value='other-2'>Other 2</option>
-                </select>
-                <label class='label--block w-50p'>
-                  <span>Shipping Cost</span>
-                  <input type='text' class='input' placeholder='$x.xx'>
-                </label>
-                <label class='label--block w-50p'>
-                  <span>Price Notes</span>
-                  <input type='text' class='input' placeholder='discounts, etc.'>
-                </label>
-                <label class='label--block w-100p'>
-                  <span>Order Notes</span>
-                  <textarea class='input textarea w-100p' placeholder='Needed inofrmation here...'></textarea>
-                  <small class='d-b w-50p c-light-purple mt-1'>These notes will be emailed in the order confirmation email.</small>
-                </label>
-              </div>
-            </form>
+            <div id='js-dropzone'></div>
           </div>
-          <div class='sidebar ml-5'>
+          <div class='sidebar--width ml-5'>
             <div class='pt-5 pb-5 pl-5 pr-5 mb-3  bordered--solid bordered--light bdrs-2'>
               <p class='fz-22 fw-300 c-light-purple mb-4'>Tracking</p>
-              <label class='label--block w-100p'>
-                <span>Tracking Code</span>
+              <label class='label--block w-100p row'>
+                <span class='label__label'>Tracking Code</span>
                 <input type='text' class='input' placeholder='type code'>
                 <small class='d-b w-80p c-light-purple mt-1'>If tracking code is set then email will be sent when saved.</small>
               </label>
-              <label class='label--block w-100p'>
-                <span>BCC Email</span>
+              <label class='label--block w-100p row'>
+                <span class='label__label'>BCC Email</span>
                 <input type='text' class='input' placeholder='email address'>
               </label>
-              <label class="checkbox flex align--center">
+              <label class="checkbox flex align--center row">
                 <input type="checkbox">
                 <span class="checkbox__indicator"></span>
                 <span class='checkbox__text'>Send eKomi BCC</span>
               </label>
             </div>
-            <div class='pt-5 pb-5 pl-5 pr-5 bordered--solid bordered--light bdrs-2'>
+            <div class='pt-5 pb-5 pl-5 pr-5 mb-3  bordered--solid bordered--light bdrs-2'>
               <p class='fz-22 fw-300 c-light-purple mb-4'>Saving</p>
               <label class="checkbox flex align--center">
                 <input type="checkbox">
@@ -139,7 +97,9 @@
                   </label>
                 </div>
               </div>
-              <button class='button button--primary'>Save</button>
+              <div class='mt-5'>
+                <button class='button button--primary row'>Save</button>
+              </div>
             </div>
             <div class='pt-5 pb-5 pl-5 pr-5 bordered--solid bordered--light bdrs-2'>
               <p class='fz-22 fw-300 c-light-purple mb-4'>Payment</p>
@@ -154,7 +114,7 @@
                 <span class='checkbox__text'>Email w/ Order Notes</span>
               </label>
 
-              <div class='mt-2'>
+              <div class='mt-5'>
                 <button class='button button--alt'>Checkout</button>
               </div>
             </div>
@@ -164,8 +124,8 @@
     </main>
 
     <script
-        src="http://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+        src="http://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="js/plugins/jquery.nice-select.js"></script>
     <script src="js/main.js"></script>
